deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bufe-api-deployment
spec:
  selector:
    matchLabels:
      app: bufe-api
  template:
    metadata:
      labels:
        app: bufe-api
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: bufe-api
          # image: ghcr.io/milanmarko/laravel-app:latest
          # image: cr.jedlik.cloud/mm-bufeapi:latest
          image: ghcr.io/milanmarko/zarodolgozat-bufe-api:latest

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: bufe-api-cluster-ip-service
spec:
  selector:
    app: bufe-api
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8000
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bufe-api-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: bufeapi-markomilan.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bufe-api-cluster-ip-service
                port:
                  number: 80
